# wechat_recorder

./: .env.example  .gitignore  README.md  debug_layout.py  pyproject.toml  requirements.txt  tree.txt
.trae/rules/: project_rules.md
config/: settings.py
data/: chat_history_live.jsonl  chat_history_v2.json
docs/: development_plan.md
src/: __init__.py  debug_pixels.py  debug_tree.py  debug_window.py  dump_all.py  main.py  test_clipboard.py  test_home.py  test_scan.py
src/core/: automation.py  layout.py  parser.py
src/utils/: stitcher.py
